# MoE-Infinity

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements-lint.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-test.yml  pre-commit-format.yml  publish-test.yml  publish.yml
.github/workflows/scripts/: cuda-install.sh
core/: CMakeLists.txt  kernel
core/aio/: archer_aio_thread.cpp  archer_aio_threadpool.h  archer_prio_aio_handle.cpp  archer_prio_aio_handle.h  archer_tensor_handle.cpp
core/common/: context.h  generator.h  pytorch.h  sync.h  types.h
core/kernel/: epilogue_utils.h  fused_mlp.cu  topk_softmax_kernels.cu  utils.h
core/memory/: pinned_memory_pool.cpp  pinned_memory_pool.h  shared_memory.h
core/model/: fused_mlp.cu  fused_mlp.h  model_topology.cpp  moe.h
core/parallel/: expert_dispatcher.cpp  expert_dispatcher.h  expert_module.cpp  expert_module.h
core/python/: fused_glu_cuda.cu  py_archer_prefetch.cpp
core/trace/: archer_tensor_tracer.cpp  archer_tensor_tracer.h  model_topology.cpp  model_topology.h
core/utils/: cuda_utils.cpp  cuda_utils.h  lockfree_queue.h  logger.h  tqdm.h  tqdm_utils.h
docker/: Dockerfile  build_prefetch.py  verify_build.py
docker/tests/: build_test_module.py  run_tests.py  test_io_integration.py
examples/: interface_example.py  readme_example.py  test_shift.py  test_shift.sh
extensions/: CMakeLists.txt
extensions/kernel/: fused_moe_mlp.cu  fused_moe_mlp.h
extensions/test_io/: CMakeLists.txt
moe_infinity/common/: constants.py
moe_infinity/distributed/: expert_executor.py
moe_infinity/entrypoints/: big_modeling.py
moe_infinity/entrypoints/openai/: api_server.py
moe_infinity/kernel/: router.py
moe_infinity/memory/: expert_entry.py
moe_infinity/models/: __init__.py  deepseek.py  kimi.py  minimax.py  mixtral.py  nllb_moe.py  qwen.py  switch_transformers.py
moe_infinity/runtime/: compile.py  model_offload.py
moe_infinity/utils/: config.py  constants.py  hf_config.py
op_builder/: __init__.py  builder.py  compute.py  expert_gemm.py  prefetch.py
scripts/: build_ast_index.py
tests/: test_fused_glu_cutlass.py  test_oai_completions.py
tests/cuda/: CMakeLists.txt  test_fused_mlp_cutlass.cu
tests/docker/: run_tests.py
tests/python/benchmark/: green_ctx.cpp  (+2 more)
(+11 files in other folders)
