[build-system]
requires = ["setuptools==75.3.2", "wheel", "torch"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 80
exclude = []

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = [
    # star imports
    "F405",
    "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # raise distinguish errors
    "B904",
    # f-string format
    "UP032",
]
select = [
    # isort
    "I",
]
ignore = [
    # Loop control variable not used within loop body
    "B007"
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "dict-item",
    "index",
    "list-item",
    "misc",
    "name-defined",
    "no-any-return",
    "no-redef",
    "operator",
    "override",
    "return-value",
    "type-var",
    "union-attr",
    "var-annotated",
]
